--- a/styles/c6_main.css
+++ b/styles/c6_main.css
@@ -9,7 +9,7 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
@@ -46,42 +46,54 @@ header img {
 	text-shadow: 2px 2px 2px #800000;
 }
 /* the styles for the main content */
-main {
-	clear: left;
-}
-main {
-	padding: 0 30px;
-}
-main h1 {
+h1 {
 	font-size: 150%;
-	padding: .3em 0;
-    border-top: 3px solid #931420;
-    border-bottom: 3px solid #931420;
+	padding-top: 0.5em;
+	padding-bottom: .25em;
+	margin: 0;
 }
-main h2 {
+
+section h2 {
 	color: #800000;
 	font-size: 130%;
 	padding: .5em 0 .25em 0;
 }
-main h3 {
+
+section h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
 }
-main img {
+
+section img {
 	padding-bottom: 1em;
 }
-main p {
+
+section p {
 	padding-bottom: .5em;
 }
-main blockquote {
+
+section blockquote {
 	padding: 0 2em;
 	font-style: italic;
 }
-main ul {
+
+section ul {
 	padding: 0 0 .25em 1.25em;
 }
-main li {
+
+section li {
 	padding-bottom: .35em;
+}
+
+aside h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+
+aside h2 {
+	color: #800000;
+	font-size: 130%;
+	padding: .5em 0 .25em 0;
 }
 
 /* the styles for the article */
@@ -90,12 +102,23 @@ article {
 	border-top: 2px solid #800000;
 	border-bottom: 2px solid #800000;
 }
+
 article h2 {
 	padding-top: 0;
 }
 article h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
+}
+
+article img {
+	float: right;
+	margin-top: auto;
+	margin-bottom: 20px;
+	margin-left: 15px;
+	border: 2px solid black;
+	display: flex;
+	padding-bottom: 0;
 }
 
 /* the styles for the aside */
@@ -111,9 +134,26 @@ aside img {
 /* the styles for the footer */
 footer {
 	background-color: #931420;
+	clear: right;
 }
+
 footer p {
 	text-align: center;
 	color: white;
 	padding: 1em 0;
+}
+
+section {
+	width: 525px;
+	float: right;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 20px;
+}
+
+aside {
+	width: 215px;
+	float: right;
+	padding-left: 20px;
+	padding-bottom: 20px;
 }
